# tpcommon

./: CMakeLists.txt  README.md  a_main.cpp  bitbucket-pipelines.yml  configure
src/: img_img8.cpp  img_img8.hpp  position.cpp  position.hpp
tests/: unit_img8.cpp  unit_machine.cpp  unit_position.cpp
